--- a/算法.md
+++ b/算法.md
@@ -135,6 +135,45 @@ function insertionSort(arr) {
 
 n^2 空间 1 稳定
 
+#### 希尔排序
+
+https://www.cnblogs.com/chengxiao/p/6104371.html
+
+　希尔排序是希尔（Donald Shell）于1959年提出的一种排序算法。希尔排序也是一种插入排序，它是简单插入排序经过改进之后的一个更高效的版本，也称为缩小增量排序，同时该算法是冲破O(n2）的第一批算法之一。本文会以图解的方式详细介绍希尔排序的基本思想及其代码实现。
+
+**基本思想**
+
+> 　　**希尔排序是把记录按下标的一定增量分组，对每组使用直接插入排序算法排序；随着增量逐渐减少，每组包含的关键词越来越多，当增量减至1时，整个文件恰被分成一组，算法便终止。**
+
+简单插入排序很循规蹈矩，不管数组分布是怎么样的，依然一步一步的对元素进行比较，移动，插入，比如[5,4,3,2,1,0]这种倒序序列，数组末端的0要回到首位置很是费劲，比较和移动元素均需n-1次。而希尔排序在数组中采用跳跃式分组的策略，通过某个增量将数组元素划分为若干组，然后分组进行插入排序，随后逐步缩小增量，继续按组进行插入排序操作，直至增量为1。希尔排序通过这种策略使得整个数组在初始阶段达到从宏观上看基本有序，小的基本在前，大的基本在后。然后缩小增量，到增量为1时，其实多数情况下只需微调即可，不会涉及过多的数据移动。
+
+　　我们来看下希尔排序的基本步骤，在此我们选择增量gap=length/2，缩小增量继续以gap = gap/2的方式，这种增量选择我们可以用一个序列来表示，{n/2,(n/2)/2...1}，称为**增量序列**。希尔排序的增量序列的选择与证明是个数学难题，我们选择的这个增量序列是比较常用的，也是希尔建议的增量，称为希尔增量，但其实这个增量序列不是最优的。此处我们做示例使用希尔增量。
+
+![img](https://images.yewq.top/1024555-20161128110416068-1421707828.png)
+
+```js
+function ShellSort(arr) {
+  var len = arr.length;
+  let gap = Math.floor(len / 2); // 增量序列
+  var temp;
+  for (gap; gap > 0; gap = Math.floor(gap / 2)) {
+    for (let i = gap; i < len; i++) {
+      temp = arr[i];
+      var j = i - gap;
+      // 插入排序
+      while(j >= 0 && arr[j] > temp) {
+        arr[j+gap]  = arr[j];
+        j -= gap
+      }
+      arr[j+gap] = temp
+    }
+  }
+  return arr
+}
+```
+
+
+
 #### 快速排序
 
 使⽤了⼆分的思想。可以算最重要的排序算法了 ⼤概就是找⼀个标志位，先遍历⼀次，所有个头⽐他矮的，都站左边，⽐他个头⾼的，都站右边，遍历 ⼀次，就把数组分成两部分，然后两遍的数组，递归执⾏相同的逻辑
@@ -234,4 +273,51 @@ function merge(left, right) {
   return result;
 }
 ```
+
+### 递归
+
+递归就是⾃⼰调⽤⾃⼰，形成⼀个调⽤栈，逐渐缩⼩⽬标，到达截⽌条件返回执⾏的 逻辑
+
+#### 数组拍平 （扁平化）
+
+```js
+Array.prototype.flat = function (level = 1) {
+  var arr = [];
+  console.log(level);
+  this.forEach((item, idx) => {
+    if (Array.isArray(item)) {
+      if(level > 0) {
+        arr = arr.concat(item.flat(level - 1)); //递归去处理数组元素
+      } else {
+        arr.push(item)
+      }
+    } else {
+      arr.push(item); //⾮数组直接push进去
+    }
+  });
+  return arr; //递归出⼝
+};
+var arr = [1, 2, 3, [4, 5, [6, 7, [8, 9]]], [10, 11]];
+console.log(arr.flat());
+```
+
+#### 爬楼
+
+ 有⼀楼梯共10级，刚开始时你在第⼀级，若每次只能跨上⼀级或⼆级，要⾛上第10级，共有多少种⾛ 法？ 其实就是个斐波那契数列，，只有两种⽅式 从第9层上⼀级，或者从第8级上⼆级， 9和8⼜各⾃⼜两种 情况
+
+最后推到3级解题，的两种⽅式1和2 是固定的次数
+
+```js
+function stairs(n) {
+  if(n < 0) return 0;
+  if(n === 0) return 1;
+  return stairs(n - 1) + stairs(n - 2) 
+}
+```
+
+### 查找
+
+查找⽐较简单，我们先来看⼀个经典的⼆分查找 有点类似幸运52的猜价格，⽐如让你在1和1000之间猜 个数字，挨个猜是很蠢的，要先猜500，如果⼤了，那就是0~500 ，每次问题减半，很快就能查到
+
+### 数据结构
 
