--- a/算法.md
+++ b/算法.md
@@ -321,3 +321,256 @@ function stairs(n) {
 
 ### 数据结构
 
+#### 队列
+
+先进先出, 类似排队
+
+通过数组push和shift模拟，通常⽤作任务管理
+
+#### 栈
+
+先进后出
+
+经典案例: 括号匹配, html标签匹配. 表达式计算
+
+```js
+// 括号匹配
+function isBalance(val) {
+  const stack = [];
+  const left = "{(";
+  const right = "})";
+  let tag = true;
+
+  const match = function (leftVal, rightVal) {
+    if (left.indexOf(leftVal) !== right.indexOf(rightVal)) {
+      return false;
+    }
+    return true
+  };
+
+  for (var i = 0; i < val.length; i++) {
+    let current = val[i];
+    if (left.includes(current)) {
+      stack.push(current);
+    } else if (right.includes(current)) {
+      tag = match(stack.pop(), current);
+      if(!tag) {
+        break;
+      }
+    }
+  }
+  return tag;
+}
+```
+
+#### 链表
+
+有点像⽕⻋，⻋厢和⻋厢之间链接，有点是可以随时替换⻋厢，react最新架构的fiber，就是从树变成 了链表，能够让diff任务随时中断
+
+![image-20220126172951653](https://images.yewq.top/image-20220126172951653.png)
+
+
+
+```js
+function SinglyLinkedList() {
+  function Node(element) {
+    this.element = element; // 当前节点元素
+    this.next = null; // 下一个指针节点
+  }
+
+  var length = 0;
+  var head = null; // 头部节点
+
+  // 向链表尾部添加一个节点
+  this.append = function (element) {
+    let current = new Node(element);
+    // 判断是否为空链表
+    if (!head) {
+      // 是空链表，就把当前节点作为头部节点
+      head = current;
+    } else {
+      // 从 head 开始一直找到最后一个 node
+      let temp = head;
+      while (temp.next !== null) {
+        temp = temp.next;
+      }
+      // 把当前节点的 next 指针 指向 新的节点
+      temp.next = current;
+    }
+    // 链表长度加1
+    length++;
+  };
+
+  // 特定位置插入一个新的项。
+  this.insert = function (position, element) {
+    // 边界处理
+    if (position < 0 || position > length) {
+      return false;
+    }
+
+    let node = new Node(element);
+
+    // 插入头节点
+    if (position === 0) {
+      node.next = head;
+      head = node;
+    } else {
+      let index = 0;
+      let currentNode = head;
+      let prevNode;
+      // 插入非头节点, 循环找到位置
+      while (index < position) {
+        index++;
+        prevNode = currentNode;
+        // 拿到下一节点
+        currentNode = currentNode.next;
+      }
+      // 把前一个节点的指针指向新节点，新节点的指针指向当前节点，保持连接性
+      prevNode.next = node;
+      node.next = currentNode;
+    }
+    // 长度加1
+    length++;
+    return true;
+  };
+
+  // 特定位置移除一项。 找到前节点. next接入后节点
+  this.removeAt = function (position) {
+    // 边界处理
+    if (position < 0 || position >= length || length === 0) {
+      return false;
+    }
+
+    if (position === 0) {
+      head = head.next;
+    } else {
+      let index = 0;
+      let currentNode = head;
+      let prevNode;
+      while (index < position) {
+        index++;
+        prevNode = currentNode;
+        currentNode = currentNode.next;
+      }
+      // 把当前节点的 next 指针 指向 当前节点的 next 指针，即是 删除了当前节点
+      prevNode.next = currentNode.next;
+    }
+    length--;
+    return true;
+  };
+
+  // 移除一项。
+  this.remove = function (element) {
+    let index = this.indexOf(element);
+    return this.removeAt(index);
+  };
+
+  //  indexOf(element)：返回元素在链表中的索引。如果链表中没有该元素则返回 -1。
+  this.indexOf = function (element) {
+    let index = 0;
+    let currentNode = head;
+    while (currentNode) {
+      // 找到就直接返回index, 结束循环
+      if (currentNode.element === element) {
+        return index;
+      }
+      index++;
+      currentNode = currentNode.next;
+    }
+
+    return -1;
+  };
+
+  // 如果链表中不包含任何元素，返回 true，如果链表长度大于 0，返回 false
+  this.isEmpty = function () {
+    return length === 0;
+  };
+
+  // 返回链表包含的元素个数，与数组的 length 属性类似
+  this.size = function () {
+    return length;
+  };
+
+  // 获取链表头部元素
+  this.getHead = function () {
+    return head.element;
+  };
+
+  // 由于链表使用了 Node 类，就需要重写继承自 JavaScript 对象默认的 toString() 方法，让其只输出元素的值
+  this.toString = function () {
+    var currentNode = head;
+    var string = "";
+
+    while (currentNode) {
+      string += "," + currentNode.element;
+      currentNode = currentNode.next;
+    }
+
+    return string.slice(1);
+  };
+
+  // 打印链表数据
+  this.print = function () {
+    console.log(this.toString());
+  };
+
+  // 获取整个链表
+  this.list = function () {
+    console.log("head: ", head);
+    return head;
+  };
+}
+```
+
+
+
+#### 集合
+
+集合 其实就是es6的set，特点就是没有重复数据
+
+#### 哈希表
+
+哈⻄其实就是js⾥的对象，它在实际的键值和存⼊的哈希值之间存在⼀层映射。![image-20220126185855734](https://images.yewq.top/image-20220126185855734.png)
+
+
+
+```js
+class HashTable {
+  constructor() {
+    this.items = {};
+  }
+  put(key, value) {
+    const hash = this.keyToHash(key);
+    this.items[hash] = value;
+  }
+  get(key) {
+    return this.items[this.keyToHash(key)];
+  }
+  remove(key) {
+    delete this.items[this.keyToHash(key)];
+  }
+  keyToHash(key) {
+    let hash = 0;
+    for (let i = 0; i < key.length; i++) {
+      hash += key.charCodeAt(i);
+    }
+    hash = hash % 37; // 为了避免 hash 的值过⼤
+    return hash;
+  }
+}
+
+let kkb = new HashTable();
+kkb.put("name", "kaikeba");
+kkb.put("age", "6");
+kkb.put("best", "⼤圣⽼师");
+console.log(kkb.get("name"));
+console.log(kkb.get("best"));
+kkb.remove("name");
+console.log(kkb.get("name"));
+
+```
+
+哈希的问题也很明显，⽐如两个数的hash值⼀样的时候，会发⽣碰撞，可以⽤存储链表的⽅式来解决( 重复的值存在链表⾥) 这些V8帮我们处理的很好了
+
+#### 树
+
