--- a/初级算法.md
+++ b/初级算法.md
@@ -1275,3 +1275,37 @@ var longestCommonPrefix = function(strs) {
 
 ```
 
+## 链表
+
+删除链表中的节点
+请编写一个函数，用于 删除单链表中某个特定节点 。在设计函数时需要注意，你无法访问链表的头节点 head ，只能直接访问 要被删除的节点 。
+
+题目数据保证需要删除的节点 不是末尾节点 
+
+![img](https://images.yewq.top/node1.jpg)
+
+输入：head = [4,5,1,9], node = 5
+输出：[4,1,9]
+解释：指定链表中值为 5 的第二个节点，那么在调用了你的函数之后，该链表应变为 4 -> 1 -> 9
+
+
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
+/**
+ * @param {ListNode} node
+ * @return {void} Do not return anything, modify node in-place instead.
+ */
+var deleteNode = function(node) {
+   // 要杀A. 但找不到A的把柄. 有B的把柄. 化身为B. A就消失了
+    node.val = node.next.val;
+    node.next = node.next.next
+};
+```
+
