--- a/初级算法.md
+++ b/初级算法.md
@@ -1277,7 +1277,8 @@ var longestCommonPrefix = function(strs) {
 
 ## 链表
 
-删除链表中的节点
+### 删除链表中的节点
+
 请编写一个函数，用于 删除单链表中某个特定节点 。在设计函数时需要注意，你无法访问链表的头节点 head ，只能直接访问 要被删除的节点 。
 
 题目数据保证需要删除的节点 不是末尾节点 
@@ -1306,6 +1307,83 @@ var deleteNode = function(node) {
    // 要杀A. 但找不到A的把柄. 有B的把柄. 化身为B. A就消失了
     node.val = node.next.val;
     node.next = node.next.next
+};
+```
+
+### 删除链表的倒数第N个节点
+
+给你一个链表，删除链表的倒数第 `n` 个结点，并且返回链表的头结点。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number} n
+ * @return {ListNode}
+ */
+var removeNthFromEnd = function (head, n) {
+  let current = head;
+  let previous = head;
+
+  while (current) {
+    let now = current;
+    for (let i = n; i > 0; i--) {
+      now = now.next;
+    }
+    if(now === null) {
+      console.log(previous, current);
+      // 删除头节点   
+      if(current === previous) return head.next;
+      previous.next = current.next
+      break
+    } else {
+      previous = current;
+      current = current.next;
+    }
+  }
+  return head
+};
+```
+
+
+
+![image-20220127131624944](https://images.yewq.top/image-20220127131624944.png)
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number} n
+ * @return {ListNode}
+ */
+var removeNthFromEnd = function (head, n) {
+  let fast = head;
+  let slow = head;
+  for (let i = 0; i < n; i++) {
+    fast = fast.next
+  }
+  // 如果走完N步 为null 说明删除的是head
+  if (fast === null) {
+    return head.next;
+  }
+  while(fast.next !== null) {
+    fast = fast.next
+    slow = slow.next
+  }
+  slow.next = slow.next.next
+  return head;
 };
 ```
 
