--- a/算法.md
+++ b/算法.md
@@ -203,27 +203,41 @@ function quickSort(arr) {
 
 ```js
 // 原地版
+//                          [8,11,4,3,6,1,9,7,2,0]
+//          flag: 8         [8,11,4,3,6,1,9,7,2,0]
+                              
+    //  (比flag大就停止) l++ -->              <-- r-- (比flag小就停止)
+    //           lr下标的两者调换位置,  继续逻辑 直到 l == r
+    //           l 赋值 flag 
+// 原地版
 function quickSort1(arr, low = 0, high = arr.length - 1) {
-  if (low >= high) return;
-  let left = low;
-  let right = high;
-  let temp = arr[left];
-  while (left < right) {
-    if (left < right && temp <= arr[right]) {
-      right--;
+    if(low >= high) return
+    let left = low
+    let right = high
+    let flag = arr[left]
+    while(left < right) {
+      // 从右边开始找比flag小的 
+      if(left < right && flag <= arr[right]) {
+          // 如果右边小right--
+            right --
+        }
+        // 找到比flag小的赋值过来
+        arr[left] = arr[right]
+        // [0,11,4,3,6,1,9,7,2,0]  -> [0,2,4,3,6,1,9,7,2,11] -> [0,2,4,3,6,1,9,7,4,11] -> [0,2,4,3,6,1,9,7,3,11] -> 
+        // [0,2,4,3,6,1,7,8,9,11]
+        if(left < right && flag >= arr[left]) {
+            left ++ // left -> 1
+        } 
+        arr[right] = arr[left] 
+        // [0,11,4,3,6,1,9,7,2,11] -> [0,2,4,3,6,1,9,7,4,11] -> [0,2,4,3,6,1,9,7,3,11] -> [0,2,4,3,6,1,9,7,6,11]
+        // 
     }
-    arr[left] = arr[right];
-    if (left < right && temp >= arr[left]) {
-      left++;
-    }
-    arr[right] = arr[left];
-  }
-  arr[left] = temp;
-  quickSort1(arr, low, left - 1);
-  quickSort1(arr, left + 1, high);
-  return arr;
+    arr[left] = flag 
+    quickSort1(arr, low, left - 1)
+    quickSort1(arr, left + 1, high)
+    return arr
 }
-console.log(quickSort1([11, 4, 3, 6, 1, 9, 7, 2, 0]));
+console.log(quickSort1([8,11,4,3,6,1,9,7,2,0]))
 ```
 
 #### 归并
@@ -281,7 +295,7 @@ function merge(left, right) {
 #### 数组拍平 （扁平化）
 
 ```js
-Array.prototype.flat = function (level = 1) {
+Array.prototype.flat = function (level = 1) { //默认值为 1 // Infinity，可展开任意深度的嵌套数组
   var arr = [];
   console.log(level);
   this.forEach((item, idx) => {
@@ -573,4 +587,12 @@ console.log(kkb.get("name"));
 哈希的问题也很明显，⽐如两个数的hash值⼀样的时候，会发⽣碰撞，可以⽤存储链表的⽅式来解决( 重复的值存在链表⾥) 这些V8帮我们处理的很好了
 
 #### 树
+
+![image-20220127104949147](https://images.yewq.top/image-20220127104949147.png)
+
+我们浏览器的dom 就是经典的树结构
+
+
+
+### 动态规划
 
