--- a/算法.md
+++ b/算法.md
@@ -596,3 +596,30 @@ console.log(kkb.get("name"));
 
 ### 动态规划
 
+动态规划是⼀种常⻅的「算法设计技巧」，并没有什么⾼深莫测，⾄于各种⾼⼤上的术语，那是吓唬别 ⼈⽤的，只要你亲⾃体验⼏把，这些名词的含义其实显⽽易⻅，再简单不过了。 ⾄于为什么最终的解法看起来如此精妙，是因为动态规划遵循⼀套固定的流程：**递归的暴⼒解法** -> **带 备忘录的递归解法** -> **⾮递归的动态规划解法**。这个过程是层层递进的解决问题的过程，你如果没有前 ⾯的铺垫，直接看最终的⾮递归动态规划解法，当然会觉得⽜逼⽽不可及了。
+
+举个⼩栗⼦，斐波那契数列
+
+#### 暴⼒递归fib
+
+```js
+function fib(n){
+ if(n==1 || n==2) return 1
+ return fib(n-1) + fib(n-2)
+}
+```
+
+![image-20220127191450457](https://images.yewq.top/image-20220127191450457.png)
+
+递归调⽤很复杂，⽐如fib(18) 左边和右边就重复计算了
+
+ 递归算法的时间复杂度怎么计算？
+
+⼦问题个数乘以解决⼀个⼦问题需要的时间。 
+
+⼦问题个数，即递归树中节点的总数。
+
+显然⼆叉树节点总数为指数级别，所以⼦问题个数为 O(2^n)。 解决⼀个⼦问题的时间，在本算法中，没有循环，只有 f(n - 1) + f(n - 2) ⼀个加法操作，时间为 O(1)。 所以，这个算法的时间复杂度为 O(2^n)，指数级别，爆炸。 基本上30，40，
+
+#### 中间存储fib
+
