--- a/算法.md
+++ b/算法.md
@@ -623,3 +623,54 @@ function fib(n){
 
 #### 中间存储fib
 
+明确了问题，其实就已经把问题解决了⼀半, 即然耗时的原因是重复计算，那么我们可以造⼀个「备忘 录」，每次算出某个⼦问题的答案后别急着返回，先记到「备忘录」⾥再返回；每次遇到⼀个⼦问题先 去「备忘录」⾥查⼀查，如果发现之前已经解决过这个问题了，直接把答案拿出来⽤，不要再耗时去计 算了。
+
+![image-20220127223054347](https://images.yewq.top/uPic/image-20220127223054347.png)
+
+```js
+// 带备忘录的递归解法;
+function fibByMemo(n) {
+  let memo = [];
+  return helper(memo, n);
+}
+
+function helper(memo, n) {
+  if (n == 1 || n == 2) return 1;
+  if(memo[n]) return memo[n];
+  memo[n] = helper(memo, n - 1) + helper(memo, n - 2);
+  return memo[n];
+}
+
+console.time('fibByMemo');
+console.log(fibByMemo(40));
+console.timeEnd('fibByMemo');
+
+```
+
+递归算法的时间复杂度怎么算？⼦问题个数乘以解决⼀个⼦问题需要的时间。
+
+⼦问题个数，即图中节点的总数，由于本算法不存在冗余计算，⼦问题就是 f(1), f(2), f(3) ... f(20)，数量和输⼊规模 n = 20 成正⽐，所以⼦问题个数为 O(n)。
+
+解决⼀个⼦问题的时间，同上，没有什么循环，时间为 O(1)。
+
+所以，本算法的时间复杂度是 O(n)。⽐起暴⼒算法，是降维打击。
+
+⾄此，带备忘录的递归解法的效率已经和动态规划⼀样了。实际上，这种解法和动态规划的思想已经差不多了，只不过这种⽅法叫做「⾃顶向下」，动态规划叫做「⾃底向上」。
+
+啥叫「⾃顶向下」？注意我们刚才画的递归树（或者说图），是从上向下延伸，都是从⼀个规模较⼤的原问题⽐如说 f(20)，向下逐渐分解规模，直到 f(1) 和 f(2) 触底，然后逐层返回答案，这就叫「⾃顶向下」。
+
+啥叫「⾃底向上」？反过来，我们直接从最底下，最简单，问题规模最⼩的 f(1) 和 f(2) 开始往上推，直到推到我们想要的答案 f(20)，这就是动态规划的思路，
+
+这也是为什么动态规划⼀般都脱离了递归，⽽是**由循环迭代完成计算**
+
+#### 动态规划fib
+
+我们可以把这个「备忘录」独⽴出来成为⼀张表，就叫做 DP table 吧，在这张表上完成「⾃底向上」 的推算岂不美哉！
+
+![image-20220127223503764](https://images.yewq.top/uPic/image-20220127223503764.png)
+
+
+
+```js
+```
+
