--- a/算法.md
+++ b/算法.md
@@ -600,7 +600,9 @@ console.log(kkb.get("name"));
 
 举个⼩栗⼦，斐波那契数列
 
-#### 暴⼒递归fib
+#### 斐波那契数列
+
+##### 暴⼒递归fib
 
 ```js
 function fib(n){
@@ -621,7 +623,7 @@ function fib(n){
 
 显然⼆叉树节点总数为指数级别，所以⼦问题个数为 O(2^n)。 解决⼀个⼦问题的时间，在本算法中，没有循环，只有 f(n - 1) + f(n - 2) ⼀个加法操作，时间为 O(1)。 所以，这个算法的时间复杂度为 O(2^n)，指数级别，爆炸。 基本上30，40，
 
-#### 中间存储fib
+##### 中间存储fib
 
 明确了问题，其实就已经把问题解决了⼀半, 即然耗时的原因是重复计算，那么我们可以造⼀个「备忘 录」，每次算出某个⼦问题的答案后别急着返回，先记到「备忘录」⾥再返回；每次遇到⼀个⼦问题先 去「备忘录」⾥查⼀查，如果发现之前已经解决过这个问题了，直接把答案拿出来⽤，不要再耗时去计 算了。
 
@@ -663,7 +665,7 @@ console.timeEnd('fibByMemo');
 
 这也是为什么动态规划⼀般都脱离了递归，⽽是**由循环迭代完成计算**
 
-#### 动态规划fib
+##### 动态规划fib
 
 我们可以把这个「备忘录」独⽴出来成为⼀张表，就叫做 DP table 吧，在这张表上完成「⾃底向上」 的推算岂不美哉！
 
@@ -672,5 +674,116 @@ console.timeEnd('fibByMemo');
 
 
 ```js
+function fibByEach(n) {
+  let dp = []
+  if(n === 1 || n===2) {
+    return 1
+  }
+  dp[1] = dp[2] = 1
+  for (let i = 3; i <= n; i++) {
+    dp[i] = dp[i - 1] + dp[i - 2]
+  }
+  return dp[n]
+}
+
+
+console.time("fibByEach");
+console.log(fibByEach(40));
+console.timeEnd("fibByEach");
+```
+
+#### 动态规划找零
+
+再举个找零的⼩栗⼦，:假如有 1, 5, 10, 20 ,50,100的⼈⺠币
+
+```
+4
+[1, 1, 1, 1] // 需 4 个 1
+5
+[5] // 需 1 个 5
+36
+[20, 10, 5, 1] // 需 20、10、5、1各⼀个
+```
+
+
+
+```js
+// 找零
+class Change {
+  constructor(changeType) {
+    this.changeType = changeType;
+    this.cache = [];
+  }
+  makeChange(amount) {
+    if (!amount) return [];
+    if (this.cache[amount]) return this.cache[amount];
+    let min = [];
+    for (let i = 0; i < this.changeType.length; i++) {
+      const now = this.changeType[i];
+      const surplus = amount - now;
+      let newMin;
+      if (surplus >= 0) {
+        // 动态的体现
+        newMin = this.makeChange(surplus);
+      }
+      // 剩余最优解. // 如果存在更小的找零硬币数, 则执行后面语句
+      if (surplus >= 0 && (newMin.length < min.length - 1 || !min.length)) {
+        min = [now].concat(newMin);
+      }
+    }
+    return (this.cache[amount] = min);
+  }
+}
+
+const change = new Change([1, 5, 10, 20, 50, 100]);
+console.log(change.makeChange(6));
+
+console.log("-".repeat(100));
+const change1 = new Change([1, 3, 4]);
+
+console.log(change1.makeChange(6)); // 其实33最好
+```
+
+### 贪心算法
+
+贪⼼算法是⼀种求近似解的思想。当能满⾜⼤部分最优解时就认为符合逻辑要求。
+
+还⽤找零 这个案例为例, 考虑使⽤贪⼼算法解题: ⽐如当找零数为 36 时, 从硬币数的最⼤值 20 开始填充,
+
+填充不下后再⽤ 10 来填充, 以此类推, 找到最优解。
+
+先最大开始
+
+```
+场景: 假如有 1, 5, 10, 20,50,100 的⼈⺠币
+36 // 找零数
+[20, 10, 5, 1] // 需 20、10、5、1
+```
+
+```js
+
+class Change1 {
+  constructor(changeType) {
+    this.changeType = changeType.sort((a, b) => b - a);
+    this.cache = [];
+  }
+  makeChange(amount) {
+    let min = [];
+    // 先最大开始
+    for (let i = 0; i < this.changeType.length; i++) {
+      while (amount - this.changeType[i] >= 0) {
+        amount = amount - this.changeType[i];
+        min.push(this.changeType[i]);
+      }
+    }
+    return min;
+  }
+}
+
+console.log("-".repeat(100));
+const change2 = new Change1([1, 3, 4]);
+
+console.log(change2.makeChange(6)); // 4 1 1
+
 ```
 
