--- a/初级算法.md
+++ b/初级算法.md
@@ -1387,3 +1387,91 @@ var removeNthFromEnd = function (head, n) {
 };
 ```
 
+​	
+
+### 反转链表
+
+
+
+给你单链表的头节点 `head` ，请你反转链表，并返回反转后的链表。
+
+示例 1：
+
+
+输入：head = [1,2,3,4,5]
+输出：[5,4,3,2,1]
+示例 2：
+
+
+输入：head = [1,2]
+输出：[2,1]
+示例 3：
+
+输入：head = []
+输出：[]
+
+
+提示：
+
+链表中节点的数目范围是 [0, 5000]
+-5000 <= Node.val <= 5000
+
+
+进阶：链表可以选用迭代或递归方式完成反转。你能否用两种方法解决这道题？
+
+```js
+//  使用栈解决
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var reverseList = function (head) {
+  if (!head) return null;
+  let stack = [];
+  while (head) {
+    stack.push(head)
+    head = head.next
+  }
+  for (let i = stack.length -1; i >= 0; i--) {
+    stack[i].next = stack[i-1] || null;
+  }
+  return stack[stack.length - 1];
+};
+//  使用新链表
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var reverseList2 = function (head) {
+  if (!head) return null;
+  let newHead = null
+  while(head) {
+    //留着下一步访问的
+    let next = head.next;
+    //每次访问的原链表节点都会成为新链表的头结点，
+    //其实就是把新链表挂到访问的原链表节点的
+    //后面就行了
+    head.next = newHead;
+    newHead = head;
+    //重新赋值，继续访问
+    head = next;
+  }
+
+  return newHead;
+};
+```
+
