--- a/算法.md
+++ b/算法.md
@@ -308,6 +308,66 @@ function merge(left, right) {
 
 **小顶堆：arr[i] <= arr[2i+1] && arr[i] <= arr[2i+2]**  
 
+>  **堆排序的基本思想是：将待排序序列构造成一个大顶堆，此时，整个序列的最大值就是堆顶的根节点。将其与末尾元素进行交换，此时末尾就为最大值。然后将剩余n-1个元素重新构造成一个堆，这样会得到n个元素的次小值。如此反复执行，便能得到一个有序序列了**
+
+- 从最后一个非叶子结点开始 length/2-1   
+- 下一个非叶子结点, 从最后一个非叶子结点n-1
+
+1. 先n个元素的无序序列，构建成大顶堆
+2. 将根节点与最后一个元素交换位置，（**将最大元素"沉"到数组末端**）
+3. 交换过后可能不再满足大顶堆的条件，所以需要将剩下的n-1个元素重新构建成大顶堆
+4. 重复第二步、第三步直到整个数组排序完成
+
+```js
+
+// 头尾交换
+function swap(heap, length) {
+  [heap[0], heap[length - 1]] = [heap[length - 1], heap[0]];
+}
+
+// 构建大顶堆
+function buildMaxHeap(heap, len) {
+  // 从最后一个非叶子结点开始 length/2-1 下一个非叶子结点, 从最后一个非叶子结点n-1
+  for (let i = Math.floor(len / 2 - 1); i >= 0; i--) {
+    // 左  小于左子树
+    if (2 * i + 1 < len && heap[2 * i + 1] > heap[i]) {
+      [heap[i], heap[2 * i + 1]] = [heap[2 * i + 1], heap[i]];
+
+      let left = 2 * i + 1;
+      // 检测左子树是否满足大顶堆性质, 不满足则继续调整 这里是上层的树回来
+      if (
+        (left * 2 + 1 < len && heap[left * 2 + 1] > heap[left]) ||
+        (left * 2 + 2 < len && heap[left * 2 + 2] > heap[left])
+      )
+        buildMaxHeap(heap, len);
+    }
+
+    // 右
+    if (2 * i + 2 < len && heap[2 * i + 2] > heap[i]) {
+      [heap[i], heap[2 * i + 2]] = [heap[2 * i + 2], heap[i]];
+      // 检测右子树是否满足大顶堆性质, 不满足则继续调整 这里是上层的树回来
+      let right = 2 * i + 2;
+      if (
+        (right * 2 + 1 < len && heap[right * 2 + 1] > heap[right]) ||
+        (right * 2 + 2 < len && heap[right * 2 + 2] > heap[right])
+      )
+        buildMaxHeap(heap, len);
+    }
+  }
+}
+
+// 主函数 长度，需要构建大顶堆，交换值 ( 长度 ) 次才能得到有序序列，由此可以确定主函数的for循环为,for (i = len; i > 0; i--)
+function heapSort(arr) {
+  console.time("heapSort");
+  for (let i = arr.length; i > 0; i--) {
+    buildMaxHeap(arr, i);
+    swap(arr, i);
+  }
+  console.timeEnd("heapSort");
+  return arr;
+}
+```
+
 
 
 ### 递归
