chore: :tada: 测试

--- a/要点解析.md
+++ b/要点解析.md
@@ -865,6 +865,10 @@ ECMAScript中，闭包指的是：
    1. 即使创建它的上下文已经销毁，它仍然存在（比如，内部函数从父函数中返回）
    2. 在代码中引用了自由变量
 
+闭包用得太多会导致性能降低的原因:  
+
+-  外部函数执行完了引用的变量会在内存中, 没有被垃圾回收，而占用内存;
+
 ```js
 var c = 1
 function foo() {
@@ -2288,6 +2292,198 @@ wrapped().next('hello!')
 如果`next`方法没有参数, `yield`表达式的返回值是`undefined` . 当`next`方法带一个参数, 该参数就会被当作上一个`yield`表达式的返回值。
 
 ES6 提供了`yield*`表达式，用来在一个 Generator 函数里面执行另一个 Generator 函数。
+
+以下参考引用: https://juejin.cn/post/6995591618371780622
+
+### var、let、const
+
+| 区别               | var  | let  | const |
+| ------------------ | ---- | ---- | ----- |
+| 是否有块级作用域   | ×    | ✔️    | ✔️     |
+| 是否初始化提升     | ✔️    | ×    | ×     |
+| 是否可以重复声明   | ✔️    | ×    | ×     |
+| 是否可以重新赋值   | ✔️    | ✔️    | ×     |
+| 是否必须设置初始值 | ×    | ×    | ✔️     |
+| 是否添加全局属性   | ✔️    | ×    | ×     |
+| 是否存在暂时性死区 | ×    | ✔️    | ✔️     |
+
+暂时性死区：创建了变量(有变量提升)，但是没有初始化，没法使用变量，直接使用就会进入暂时性死区
+
+### Set、Map
+
+**`Set` 和 `Map` 都是强引用**(下面有说明)，**都可以遍历，比如 for of / forEach**
+
+**Set**
+
+允许存储任何类型的唯一值，只有键值(key)没有键名，常用方法 `add`、`size`、`has`、`delete`等等，看下用法
+
+```js
+
+// 引用类型指针不一样，无法去重
+const set4 = new Set([1, { name: '沐华' }, 1, 2, { name: '沐华' }])
+console.log(set4) // { 1, { name: '沐华' }, 2, { name: '沐华' } }
+
+// 引用类型指针一样，就可以去重
+const obj = { name: '沐华' }
+const set5 = new Set([1, obj, 1, 2, obj])
+console.log(set5) // { 1, { name: '沐华' }, 2 }
+```
+
+**Map**
+
+允许存储任何类型键名的键值对的集合 常用方法 set`、`get`、`size`、`has`、`delete
+
+与Object区别
+
+|          | Map                                                          | Object                                                       |
+| :------- | :----------------------------------------------------------- | ------------------------------------------------------------ |
+| 意外的键 | `Map` 默认情况不包含任何键。只包含显式插入的键。             | 一个 `Object` 有一个原型, 原型链上的键名有可能和你自己在对象上的设置的键名产生冲突。**备注：**虽然 ES5 开始可以用 `Object.create(null)` 来创建一个没有原型的对象，但是这种用法不太常见。 |
+| 键的类型 | 一个 `Map`的键可以是**任意值**，包括函数、对象或任意基本类型。 | 一个`Object` 的键必须是一个 [`String`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String) 或是[`Symbol`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Symbol)。 |
+| 键的顺序 | `Map` 中的 key 是有序的。因此，当迭代的时候，一个 `Map` 对象以插入的顺序返回键值。 | 一个 `Object` 的键是无序的**备注：**自ECMAScript 2015规范以来，对象*确实*保留了字符串和Symbol键的创建顺序； 因此，在只有字符串键的对象上进行迭代将按插入顺序产生键。 |
+| Size     | `Map` 的键值对个数可以轻易地通过[`size`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Map/size) 属性获取 | `Object` 的键值对个数只能手动计算                            |
+| 迭代     | `Map` 是 [iterable](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols) 的，所以可以直接被迭代。 | 迭代一个`Object`需要以某种方式获取它的键然后才能迭代。       |
+| 性能     | 在频繁增删键值对的场景下表现更好。                           | 在频繁添加和删除键值对的场景下未作出优化。                   |
+
+### WeakSet、WeakMap
+
+**键对象的“弱引用", 这意味着在没有其他引用存在时垃圾回收能正确进行**, **key 是不可枚举的**
+
+**WeakSet**
+
+与`Set`相比，`WeakSet` 只能是**对象的集合**，而不能是任何类型的任意值
+
+#### [检测循环引用](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/WeakSet#检测循环引用)
+
+递归调用自身的函数需要一种通过跟踪哪些对象已被处理，来应对循环数据结构的方法。
+
+为此，WeakSet非常适合处理这种情况：
+
+```js
+// 对 传入的subject对象 内部存储的所有内容执行回调
+function execRecursively(fn, subject, _refs = null){
+	if(!_refs)
+		_refs = new WeakSet();
+
+	// 避免无限递归
+	if(_refs.has(subject))
+		return;
+
+	fn(subject);
+	if("object" === typeof subject){
+		_refs.add(subject);
+		for(let key in subject)
+			execRecursively(fn, subject[key], _refs);
+	}
+}
+
+const foo = {
+	foo: "Foo",
+	bar: {
+		bar: "Bar"
+	}
+};
+
+foo.bar.baz = foo; // 循环引用!
+execRecursively(obj => console.log(obj), foo);
+```
+
+WeakMap
+
+```js
+// 对 传入的subject对象 内部存储的所有内容执行回调
+function execRecursively(fn, subject, _refs = null){
+	if(!_refs)
+		_refs = new WeakMap();
+
+	// 避免无限递归
+	if(_refs.has(subject))
+		return;
+
+	fn(subject);
+	if("object" === typeof subject){
+		_refs.set(subject);
+		for(let key in subject)
+			execRecursively(fn, subject[key], _refs);
+	}
+}
+
+const foo = {
+	foo: "Foo",
+	bar: {
+		bar: "Bar"
+	}
+};
+
+foo.bar.baz = foo; // 循环引用!
+execRecursively(obj => console.log(obj), foo);
+```
+
+### 数据类型
+
+基础类型：`Number`, `String`, `Boolean`, `undefined`, `null`, `Symbol`, `BigInt`
+
+复杂类型：`Object`（`Function`/`Array`/`Date`/`RegExp`/`Math`/`Set`/`Map`...)
+
+**`BigInt`** 是一种内置对象，它提供了一种方法来表示大于 `2^53 - 1` 的整数, 这原本是 Javascript中可以用 [`Number`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Number) 表示的最大数字。**`BigInt`** 可以表示任意大的整数。
+
+### 类型转换
+
+- 显示类型转换：`Number()`, `String()`, `Boolean()`
+- 隐式类型转换：四则运算，判断语句，`Native` 调用，`JSON` 方法
+
+#### **显示转换**
+
+1. **Number()**
+
+原始类型转换
+
+```js
+console.log(Number(undefined)) // NaN
+console.log(Number(null)) // 0
+console.log(Number({a:1})) // NaN 原因往下看
+```
+
+
+
+引用类型转换
+
+```js
+let a = {a:1}
+console.log(Number(a)) // NaN
+// 原理
+a.valueOf() // {a:1}
+a.toString() // "[object Object]"
+Number("[object Object]") // NaN
+```
+
+先调用对象自身的 `valueOf` 方法，如果该方法返回原始类型的值(数值、字符串和布尔值)，则直接对该值使用 `Number` 方法，不再继续
+
+如果 `valueOf` 方法返回复合类型的值，再调用对象自身的 `toString` 方法，如果 `toString` 方法返回原始类型的值，则对该值使用 `Number` 方法，不再继续
+
+如果 `toString` 方法返回的还是复合类型的值，则报错
+
+#### **隐式转换**
+
+```js
+
+// 四则运算  如把String隐式转换成Number
+console.log(+'1' === 1) // true
+
+// 判断语句  如把String隐式转为Boolean
+if ('1') console.log(true) // true
+
+// Native调用  如把Object隐式转为String
+alert({a:1}) // "[object Object]"
+console.log(([][[]]+[])[+!![]]+([]+{})[!+[]+!![]]) // "nb"
+
+// JSON方法 如把String隐式转为Object
+console.log(JSON.parse("{a:1}")) // {a:1}
+
+```
+
+### 浅拷贝
+
+
 
 ## CSS
 
