--- a/要点解析.md
+++ b/要点解析.md
@@ -2481,7 +2481,33 @@ console.log(JSON.parse("{a:1}")) // {a:1}
 
 ```
 
-### 浅拷贝
+### 拷贝
+
+#### 浅拷贝
+
+第一层是引用类型就拷贝指针，不是就拷贝值。拷贝栈不拷贝堆
+
+```js
+// 1. 展开运算符 ...
+let obj1 = { a:1, b:{ c:3 } }
+let obj2 = { ...obj1 }
+obj1.a = 'a'
+obj1.b.c = 'c'
+console.log(obj1) // { a:'a', b:{ c:'c' } }
+console.log(obj2) // { a:1, b:{ c:'c' } }
+
+// 2. Object.assign() 把obj2合并到obj1
+let obj3 = Object.assign({}, obj2)
+
+// 3. 遍历
+
+// 4. 数组浅拷贝  用Array方法 concat()和slice()
+let arr1 = [ 1,2,{ c:3 } ]
+let arr2 = arr1.concat()
+let arr3 = arr1.slice()
+```
+
+#### 深拷贝
 
 
 
