--- a/要点解析.md
+++ b/要点解析.md
@@ -2495,6 +2495,10 @@ obj1.a = 'a'
 obj1.b.c = 'c'
 console.log(obj1) // { a:'a', b:{ c:'c' } }
 console.log(obj2) // { a:1, b:{ c:'c' } }
+var a = [{a: 1}]
+b = [...a]
+a[0].a = 2
+// b => [{a: 2}]
 
 // 2. Object.assign() 把obj2合并到obj1
 let obj3 = Object.assign({}, obj2)
@@ -2508,6 +2512,32 @@ let arr3 = arr1.slice()
 ```
 
 #### 深拷贝
+
+```js
+
+// 深拷贝
+    // 1. JSON.parse(JSON.stringify(obj)) 缺点: 拷贝其他引用类型，拷贝函数，循环引用等情况
+
+    // 2. 手写
+    function clone(target, map = new WeakMap()) {
+      // 防止循环引用
+      if (typeof target === "object") {
+        let obj = Array.isArray(target) ? [] : {};
+        // 防止循环引用
+        if (map.get(target)) {
+          return map.get(target);
+        }
+        map.set(target, obj);
+          // 优化点 for in 每次迭代操作会同时搜索实例和原型属性，会产生更多的开销，可以用 while
+        for (let k in target) {
+          obj[k] = clone(target[k], map); // // 循环
+        }
+        return obj;
+      } else {
+        return target;
+      }
+    }
+```
 
 
 
