--- a/要点解析.md
+++ b/要点解析.md
@@ -1,4 +1,4 @@
-![image-20210824103652399](https://images.yewq.top/image-20210824103652399.png)
+<img src="https://images.yewq.top/image-20210824103652399.png" alt="image-20210824103652399" style="zoom:150%;" />
 
 ![image-20210323175856469](https://images.yewq.top/image-20210323175856469.png)
 
@@ -1878,7 +1878,7 @@ function objectFactory(Constructor, ...args) {
     var obj = {};
     obj.__proto__ = Constructor.prototype
     var res = Constructor.apply(obj, args)
-    return Object.prototype.toString.call(res) === '[object Object]' ? res : obj;
+    return typeof res === 'object' ? res : obj;
 }
 ```
 
@@ -2473,7 +2473,7 @@ console.log(+'1' === 1) // true
 if ('1') console.log(true) // true
 
 // Native调用  如把Object隐式转为String
-alert({a:1}) // "[object Object]"
+alert({a:1}) // "[object Object]" [].valueOf().toString() => ''
 console.log(([][[]]+[])[+!![]]+([]+{})[!+[]+!![]]) // "nb"
 
 // JSON方法 如把String隐式转为Object
