--- a/要点解析.md
+++ b/要点解析.md
@@ -2465,6 +2465,64 @@ Promise.race = function(arr) {
 ...
 ```
 
+#### Promise.allSettled
+
+```js
+...
+/* 
+  返回一个在所有给定的promise都已经fulfilled或rejected后的promise，并带有一个对象数组，每个对象表示对应的promise结果。
+
+  当您有多个彼此不依赖的异步任务成功完成时，或者您总是想知道每个promise的结果时，通常使用它。
+  对于每个结果对象，都有一个 status 字符串。如果它的值为 fulfilled，则结果对象上存在一个 value 。如果值为 rejected，则存在一个 reason 。value（或 reason ）反映了每个 promise 决议（或拒绝）的值
+*/
+Promise.allSettled = function (arr) {
+  var args = arr.slice();
+  return new Promise((resolve, reject) => {
+    var remaining = args.length;
+    function res(i, val, reject) {
+      try {
+        if (val && (typeof val === 'object' || typeof val === 'function')) {
+          const { then } = val;
+          then.call(
+            val,
+            function (value) {
+              res(i, value);
+            },
+            function (value) {
+              res(i, value, true);
+            }
+          );
+          return;
+        }
+        if (!reject) {
+          args[i] = {
+            value: val,
+            status: 'fulfilled',
+          };
+        } else {
+          args[i] = {
+            reason: val,
+            status: 'rejected',
+          };
+        }
+      } catch (error) {
+        args[i] = {
+          reason: error,
+          status: 'rejected',
+        };
+      }
+      if (--remaining === 0) {
+        resolve(args);
+      }
+    }
+    for (let i = 0; i < args.length; i++) {
+      res(i, args[i]);
+    }
+  });
+};
+...
+```
+
 
 
 ### generator
