--- a/要点解析.md
+++ b/要点解析.md
@@ -2523,6 +2523,50 @@ Promise.allSettled = function (arr) {
 ...
 ```
 
+#### Promise.any
+
+```js
+...
+// 这个方法用于返回第一个成功的 promise 。只要有一个 promise 成功此方法就会终止，它不会等待其他的 promise 全部完成。
+Promise.any = function(arr) {
+  var args = arr.slice();
+  return new Promise((resolve, reject) => {
+    var remaining = args.length;
+    function res(i, val, rejected) {
+      try {
+        if (val && (typeof val === 'object' || typeof val === 'function')) {
+          const { then } = val;
+          then.call(
+            val,
+            function (value) {
+              res(i, value);
+            },
+            function (value) {
+              res(i, value, true);
+            }
+          );
+          return;
+        }
+        if (!rejected) {
+          resolve(val);
+        } else {
+          args[i] = new Error(val);
+        }
+      } catch (error) {
+        args[i] = new Error(error);
+      }
+      if (--remaining === 0) {
+        reject('AggregateError: No Promise in Promise.any was resolved');
+      }
+    }
+    for (let i = 0; i < args.length; i++) {
+      res(i, args[i]);
+    }
+  });
+}
+...
+```
+
 
 
 ### generator
