--- a/要点解析.md
+++ b/要点解析.md
@@ -1325,21 +1325,28 @@ Object.prototype.toString.call(Symbol(1)) // "[object Symbol]"
 #### instanceof 操作符的实现原理
 
 ```js
-function new_instance_of(leftVaule, rightVaule) { 
-    if (typeof leftValue !== 'object' || typeof rightValue !== 'object') throw Error('Right-hand side of 'instanceof' is not an object');
-    let rightProto = rightVaule.prototype; // 取右表达式的 prototype 值
-    leftVaule = leftVaule.__proto__; // 取左表达式的__proto__值
-    while (true) {
-    	if (leftVaule === null) {
-            return false;	
-        }
-        if (leftVaule === rightProto) {
-            return true;	
-        } 
-        leftVaule = leftVaule.__proto__ 
-    }
-}
+function new_instance_of(leftValue, rightValue) {
+  if (
+    !leftValue ||
+    !rightValue ||
+    typeof leftValue !== "object" ||
+    typeof rightValue !== "function"
+  ) {
+    throw Error("Right-hand side of " instanceof " is not an object");
+  }
 
+  let rightProto = rightValue.prototype; // 取右表达式的 prototype 值
+  leftValue = leftValue.__proto__; // 取左表达式的__proto__值
+  while (true) {
+    if (leftValue === null) {
+      return false;
+    }
+    if (leftValue === rightProto) {
+      return true;
+    }
+    leftValue = leftValue.__proto__;
+  }
+}
 ```
 
 例子
@@ -3004,6 +3011,30 @@ let arr3 = arr1.slice()
 记着会改变原数组的几个方法
 
 pop`、`push`、`shift`、`unshift`、`reverse`、`sort`、`splice`、`fill`、`copyWithin
+
+### 高频手写代码
+
+#### 解析 url 参数
+
+```js
+function getUrlParams(url) {
+  try {
+    url = decodeURIComponent(url);
+    const reg = /([^?&=]+)=([^?&=]+)/g;
+    const obj = {};
+    url.replace(reg, (match, s1, s2) => {
+      obj[s1] = s2;
+    });
+    return obj
+  } catch (error) {
+    return false
+  }
+}
+```
+
+
+
+
 
 ## CSS
 
@@ -6248,4 +6279,6 @@ console.log(loopLinkedList.toString());
 - 链表代码写得好坏，可以看出一个人写代码是否够细心，考虑问题是否全面，思维是否缜密。
 - 所以，这也是很多面试官喜欢让人手写链表代码的原因。
 - 一定要自己写代码实现一下，才有效果。
+
+
 
