--- a/初级算法.md
+++ b/初级算法.md
@@ -38,16 +38,13 @@ for (int i = 0; i < len; i++) {
 var removeDuplicates = function(nums) {
     // 题解中的双指针
     if (nums.length === 0) return 0
-    var i = 1;
+    var i = 0;
     for (var j = 1; j < nums.length; j++) {
-        if(nums[i-1] != nums[j]) {
-            if(j - (i-1)>1) {
-              nums[i] = nums[j]
-            }
-            i++;
+        if(nums[i] != nums[j]) {
+           nums[++i] = nums[j]
         }
     }
-    return i;
+    return i+1;
 };
 ```
 
