--- a/要点解析.md
+++ b/要点解析.md
@@ -4662,6 +4662,7 @@ https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Memory_Management
 
 | 状态码 | 描述                                                         |
 | ------ | ------------------------------------------------------------ |
+| 101    | 协议切换 表示服务器应客户端升级协议的请求                    |
 | 200    | 请求成功                                                     |
 | 206    | 已完成指定范围的请求(带Range头的GET请求),场景如video,audio播放文件较大,文件分片时 |
 | 301    | 永久重定向                                                   |
