--- a/面试题.md
+++ b/面试题.md
@@ -243,25 +243,57 @@
 > 二面就一面写的题目来问
 
 - 什么是暂时性死区？
+
 - 块级作用域和函数作用域
+
 - call bind new 实现原理
+
 - vue 双向绑定原理
+
 - LRU 算法
+
 - http2.0 的有哪些内容
+
 - http 缓存
+
 - rem vw 区别
+
 - 移动 1px 问题
+
 - 函数柯里化
+
 - diff 算法
+
 - 虚拟 dom
+
 - nextTick 原理
+
 - 事件循环
+
 - 闭包
+
 - 如何解决移动端 click300ms 延迟？
+
 - vue 有哪些全局组件
+
 - 移动端如何完成拖拽功能？
+
 - 防抖和节流的区别
+
 - 一道逻辑题：有 5L 的桶和 3L 的桶，如何拿到 4L 的水
+
+  ```
+  // 方法一:
+  1. 3L装满, 倒入5L
+  2. 3L再装满, 倒入5L, 直到满
+  3. 3L剩1L. 5L倒掉. 3L导入
+  4. 3L装满, 倒入5L, 得4L
+  // 二
+  1. 5L装满, 倒入3L, 直到满. 得2L
+  2. 将2L导入3L. 5L装满. 倒入3L, 直到满. 得4L
+  ```
+
+  
 
 #### 三面
 
