--- a/2022面试题.md
+++ b/2022面试题.md
@@ -1,1 +1,88 @@
 # 2022面试题
+
+## html
+
+#### 从浏览器地址栏输入 url 到请求返回发生了什么?
+
+浏览器 URL 解析 -> DNS解析(获取ip地址, 先缓存, 没有根域名服务器查 -> com顶级域名 -> 权威域名)  -> TCP链接(http三次握手, https多了一个TLS加密协议的握手过程) -> http请求 -> 服务器响应 -> 浏览器开始渲染 -> 四次挥手关闭链接
+
+问: TCP 连接为啥三次握手? 
+
+客户端和服务端要进行可靠传输，那么就需要**确认双方的接收和发送能力**。第一次握手可以确认客服端的**发送能力**，第二次握手，确认了服务端的**发送能力和接收能力**，所以第三次握手才可以确认客户端的**接收能力**。不然容易出现丢包的现象
+
+
+
+## CSS
+
+## JS
+
+#### 如何判断变量是否为数组？
+
+```js
+Array.isArray(arr);
+arr instanceof Array;
+Object.prototype.toString.call(arr) === '[object Array]';
+```
+
+#### 根据 0.1+0.2 ! == 0.3，讲讲 IEEE 754 ，如何让其相等？
+
+原因: 
+
+- **进制转换:** js数字计算时, 会转换为二进制. 最大存储 **53位** 有效数字, 大于会被截掉. 导致精度丢失
+- **对阶运算:** 由于指数位数不相同，运算时需要对阶运算，阶小的尾数要根据阶差来右移（`0舍1入`），尾数位移时可能会发生数丢失的情况，影响精度
+
+如何让其相等, 
+
+- 字符串相加
+
+```js
+// 字符串数字相加
+var addStrings = function (num1, num2) {
+  let i = num1.length - 1;
+  let j = num2.length - 1;
+  const res = [];
+  let carry = 0;
+  while (i >= 0 || j >= 0) {
+    const n1 = i >= 0 ? Number(num1[i]) : 0;
+    const n2 = j >= 0 ? Number(num2[j]) : 0;
+    const sum = n1 + n2 + carry;
+    res.unshift(sum % 10);
+    carry = Math.floor(sum / 10);
+    i--;
+    j--;
+  }
+  if (carry) {
+    res.unshift(carry);
+  }
+  return res.join("");
+};
+
+function isEqual(a, b, sum) {
+  const [intStr1, deciStr1] = a.toString().split(".");
+  const [intStr2, deciStr2] = b.toString().split(".");
+  const inteSum = addStrings(intStr1, intStr2); // 获取整数相加部分
+  const deciSum = addStrings(deciStr1, deciStr2); // 获取小数相加部分
+  return inteSum + "." + deciSum === String(sum);
+}
+
+console.log(isEqual(0.1, 0.2, 0.3)); // true
+```
+
+#### new 实现
+
+ new 实现了哪些功能?
+
+- 能访问构造函数的属性
+- 把这个对象的构造原型(`__proto__`)指向函数的原型对象`prototype`，并绑定this
+- 能访问函数原型中的属性.
+- 如果构造函数带返回值. 返回类型如果是对象. 则返回这个对象. 否则还是实例对象. 
+
+```js
+function New(fn) [
+  var obj = {}
+  obj.__proto__ = fn.prototype;
+  var res = fn.apply(obj, [...arguments.slice(1)])
+  return typeof res === 'object' ? res : obj; 
+]
+```
+
