--- a/2022面试题.md
+++ b/2022面试题.md
@@ -86,3 +86,61 @@ function New(fn) [
 ]
 ```
 
+Promise.all 的实现
+
+```js
+// Promise.all([A, B])
+Promise.all = function(arr) {
+    let result = []
+    return new Promise((resolve, reject)=>{
+        let remaining = arr.length
+        function res(val, i) {
+            try {
+                if (val && (typeof val === 'function' || typeof val === 'object')) {
+                    const {
+                        then
+                    } = val;
+                    // 遗漏
+                    if (typeof then === 'function') {
+                        
+                        then.call(
+                            val,
+                        	function(value) {
+                                res(value, i)
+                            },
+                        	reject
+                        );
+                        return; 
+                    }
+                }
+                result[i] = val;
+                if (--remaining === 0) {
+                    resolve(result)
+                }
+            } catch(error) {
+                reject(error)
+            }
+
+        }
+        for (let i = 0; i < arr.length; i++) {
+            res(arr[i], i)
+        }
+    })
+}
+```
+
+## http
+
+#### GET 和 POST 的区别。
+
+- 从**缓存**的角度，GET 请求会被浏览器主动缓存下来，留下历史记录，而 POST 默认不会。
+
+- 从**编码**的角度，GET 只能进行 URL 编码，只能接收 ASCII 字符，而 POST 没有限制。
+
+- 从**参数**的角度，GET 一般放在 URL 中，因此不安全，POST 放在请求体中，更适合传输敏感信息。
+
+- 从**幂等性**的角度，GET 是幂等的，而 POST 不是。(幂等表示执行相同的操作，结果也是相同的)
+
+- 从 **TCP** 的角度，GET 请求会把请求报文一次性发出去，而 POST 会分为两个 TCP 数据包，首先发 header 部分，如果服务器响应 100(continue)， 然后发 body 部分。(火狐浏览器除外，它的 POST 请求只发一个 TCP 包)
+
+
