--- a/2022面试题.md
+++ b/2022面试题.md
@@ -129,7 +129,7 @@ Promise.all = function(arr) {
 }
 ```
 
-## http
+## [http](https://juejin.cn/post/6844904100035821575)
 
 #### GET 和 POST 的区别。
 
@@ -143,4 +143,94 @@ Promise.all = function(arr) {
 
 - 从 **TCP** 的角度，GET 请求会把请求报文一次性发出去，而 POST 会分为两个 TCP 数据包，首先发 header 部分，如果服务器响应 100(continue)， 然后发 body 部分。(火狐浏览器除外，它的 POST 请求只发一个 TCP 包)
 
+#### 简要概括一下 HTTP 的特点？HTTP 有哪些缺点？
+
+特点: 
+
+1. **灵活可扩展**，主要体现在两个方面。一个是语义上的自由，只规定了基本格式，比如空格分隔单词，换行分隔字段，其他的各个部分都没有严格的语法限制。另一个是传输形式的多样性，不仅仅可以传输文本，还能传输图片、视频等任意数据，非常方便。
+2. **无状态**。这里的状态是指**通信过程的上下文信息**，而每次 http 请求都是独立、无关的，默认不需要保留状态信息。
+3. **无连接**  无连接的含义是限制每次连接只处理一个请求。服务器处理完客户的请求，并收到客户的应答后，即断开连接。采用这种方式可以节省传输时间
+4. **简单快速** 客户向服务器请求服务时，只需传送请求方法和路径。请求方法常用的有GET、HEAD、POST。每种方法规定了客户与服务器联系的类型不同。由于HTTP协议简单，使得HTTP服务器的程序规模小，因而通信速度很快
+
+缺点: 
+
+1. **无状态** 对于长链接的场景来说, 需要保存大量的上下文信息，以免传输大量重复的信息，那么这时候无状态就是 http 的缺点了。
+2. **明文传输** 协议里的报文 是文本形式 这当然对于调试提供了便利，但同时也让 HTTP 的报文信息暴露给了外界，给攻击者也提供了便利。`WIFI陷阱`就是利用 HTTP 明文传输的缺点，诱导你连上热点，然后疯狂抓你所有的流量，从而拿到你的敏感信息
+3. **队头阻塞问题 ** 当开始长链接. 同一时刻只能处理一个请求. 请求时间过长的情况下. 其他请求只能处于阻塞状态
+
+#### HTTP1.1 如何解决 HTTP 的队头阻塞问题？
+
+- **并发连接**
+
+  - 对于一个域名允许分配多个长连接，那么相当于增加了任务队列，不至于一个队伍的任务阻塞其它所有任务。在RFC2616规定过客户端最多并发 2 个连接，不过事实上在现在的浏览器标准中，这个上限要多很多，Chrome 中是 6 个。
+
+- **域名分片**
+
+  - 一个域名不是可以并发 6 个长连接吗？那我就多分几个域名。
+
+    比如 content1.sanyuan.com 、content2.sanyuan.com。
+
+    这样一个`sanyuan.com`域名下可以分出非常多的二级域名，而它们都指向同样的一台服务器，能够并发的长连接数更多了，事实上也更好地解决了队头阻塞的问题。
+
+## React
+
+### 为什么要自定义事件机制？
+
+- 抹平浏览器差异，实现更好的跨平台。
+- 避免垃圾回收，React 引入事件池，在事件池中获取或释放事件对象，避免频繁地去创建和销毁。
+- 方便事件统一管理和事务机制。
+
+### Class component
+
+#### 生命周期
+
+<img src="https://images.yewq.top/uPic/image-20220214230110035.png" alt="image-20220214230110035" style="zoom:150%;" />
+
+挂载阶段: constructor() -> getDerivedStateFromProps() 返回一个对象更新state, 是否更新state -> render() -> 更新Dom树 -> componentDidMount() 
+
+更新阶段:  getDerivedStateFromProps() -> shouldComponentUpdate() 是否更新这次. -> render() -> getSnapShotBeforeUpdate() 拿到更新前的Dom相关值 -> 更新Dom树 -> componentDidUpdate()
+
+卸载阶段: componentWillUnmount()
+
+### hook
+
+#### 为什么不能在条件语句中写 hook
+
+hook 在每次渲染时的查找是根据一个“全局”的下标对链表进行查找的，如果放在条件语句中使用，有一定几率会造成拿到的状态出现错乱.
+
+#### HOC 和 hook 的区别
+
+hook 复用**逻辑**. HOC复用**逻辑和视图**
+
+#### useEffect 和 useLayoutEffect 区别
+
+函数组件一次state更新的过程: 
+
+1. 某state发生了变化
+2. React内部更新state
+3. 处理更新组件的Dom节点
+4. Dom更新渲染
+5. Dom更新后 (Layout阶段后)
+
+`useEffect` 在第 4 步之后执行，且是异步的，保证了不会阻塞浏览器进程。 `useLayoutEffect` 在第 3 步至第 4 步之间执行，且是同步代码，所以会阻塞后面代码的执行
+
+#### useEffect 依赖为空数组与 componentDidMount 区别
+
+在 `render` 执行之后，`componentDidMount` 会执行，如果在这个生命周期中再一次 `setState` ，会导致再次 `render` ，返回了新的值，浏览器只会渲染第二次 `render` 返回的值，这样可以避免闪屏。
+
+但是 `useEffect` 是在真实的 DOM 渲染之后才会去执行，这会造成两次 `render` ，有可能会闪屏。(useEffect时commit完成后异步调用)
+
+实际上 `useLayoutEffect` 会更接近 `componentDidMount` 的表现，它们都同步执行且会阻碍真实的 DOM 渲染的。 useLayoutEffect和componentDidMount调用时机一致，也是在layout阶段同步调用.
+
+#### React.memo() 和 React.useMemo() 的区别
+
+- memo是高阶组件. 浅比较props, 引用类型可以用第二个参数手动比价
+
+- useMemo 返回一个缓存值. 只有依赖项发生变化才会重新执行.
+
+- useCallback 根据依赖项缓存函数
+
+  - 有很多时候，我们在 `useEffect` 中使用某个定义的外部函数，是要添加到 `deps` 数组中的，如果不用 `useCallback` 缓存，这个函数在每次重新渲染时都是一个完全新的函数，也就是引用地址发生了变化，这就会导致 `useEffect` 总会无意义的执行。
+
+    
 
