--- a/要点解析.md
+++ b/要点解析.md
@@ -1612,6 +1612,9 @@ function add(a, b) {
 // 假设有一个 curry 函数可以做到柯里化, 可以传一个, 多个参数
 var addCurry = curry(add);
 console.log(addCurry(1)(2)) // 3
+
+// 部分函数调用
+f(a,b,c) → f(a)(b,c) / f(a,b)(c)
 ```
 
 #### 用途
@@ -4747,6 +4750,7 @@ https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Memory_Management
 | ------ | ------------------------------------------------------------ |
 | 101    | 协议切换 表示服务器应客户端升级协议的请求                    |
 | 200    | 请求成功                                                     |
+| 204    | No Content含义与 200 相同，但响应头后没有 body 数据。   |
 | 206    | 已完成指定范围的请求(带Range头的GET请求),场景如video,audio播放文件较大,文件分片时 |
 | 301    | 永久重定向                                                   |
 | 302    | 临时重定向                                                   |
@@ -4826,6 +4830,12 @@ https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Memory_Management
   - 不同的资源从不同的二域名中获取，而它们都指向同一台服务器
 - 在`HTTP2.0`下，可以一瞬间加载出来很多资源，因为支持`多路复用`，可以在`一个TCP连接中发送多个请求`
 
+**HTTP/2 有哪些改进**？（很大可能问原理）
+
+- 头部压缩。
+- 多路复用。
+- 服务器推送。
+
 ##### [说一下 HTTP 代理](https://juejin.cn/post/6994629873985650696#heading-12)
 
 - 中间人代理
@@ -4839,7 +4849,7 @@ https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Memory_Management
 - **负载均衡**：客户端请求先到代理服务器，而代理服务器后面有多少源服务器，IP是多少，客户端是不知道的。因此，代理服务器收到请求后，通过特定的算法(随机算法、轮询、一致性hash、LUR(最近最少使用) 算法这里不细说了)把请求分发给不同的源服务器，让各个源服务器负载尽量均衡
 - **缓存代理**：将内容缓存到代理服务器 `缓存代理`就是让代理服务器接管一部分的服务端的http缓存，客户端缓存过期之后就近到代理服务器的缓存中获取，代理缓存过期了才请求源服务器，这样流量大的时候能明显降低源服务器的压力
 
-#### https
+#### [https](https://juejin.cn/post/6994629873985650696#heading-23)
 
 `HTTPS` 是超文本传输安全协议，即`HTTP + SSL/TLS`。说白了，就是一个加强版的HTTP
 
@@ -4913,14 +4923,86 @@ https://developer.mozilla.org/zh-CN/docs/Web/API/IndexedDB_API
 
 ### [跨域方案](https://segmentfault.com/a/1190000011145364)
 
-- CORS
-- websocket 是HTML5标准中的一种通信协议 以`ws://`(非加密)和`wss://`(加密)作为协议前缀，该协议不实行同源政策，只要服务器支持就行
-- postMessage
+- CORS **Access-Control-Allow-Origin**
+
+- nginx反向代理跨域
+
+  - ```bash
+    # 比如说现在客户端的域名为client.com，服务器的域名为server.com，客户端向服务器发送 Ajax 请求，当然会跨域了，那这个时候让 Nginx 登场了，通过下面这个配置:
+    server {
+      listen  80;
+      server_name  client.com;
+      location /api {
+        proxy_pass server.com;
+      }
+    }
+    ```
+
+  - 
+
 - JSONP
   - 通过添加一个<script>标签，向服务器请求JSON数据，这样不受同源政策限制。服务器收到请求后，将数据放在一个callback回调函数中传回来
+
   - `只支持GET请求`且`不安全`，**可能遇到XSS攻击，不过它的好处是可以向老浏览器或不支持CORS的网站请求数据**
-- nginx反向代理跨域
+
+  - ```js
+    const jsonp = ({ url, params, callbackName }) => {
+      const generateURL = () => {
+        let dataStr = '';
+        for(let key in params) {
+          dataStr += `${key}=${params[key]}&`;
+        }
+        dataStr += `callback=${callbackName}`;
+        return `${url}?${dataStr}`;
+      };
+      return new Promise((resolve, reject) => {
+        // 初始化回调函数名称
+        callbackName = callbackName || Math.random().toString.replace(',', ''); 
+        // 创建 script 元素并加入到当前文档中
+        let scriptEle = document.createElement('script');
+        scriptEle.src = generateURL();
+        document.body.appendChild(scriptEle);
+        // 绑定到 window 上，为了后面调用
+        window[callbackName] = (data) => {
+          resolve(data);
+          // script 执行完了，成为无用元素，需要清除
+          document.body.removeChild(scriptEle);
+        }
+      });
+    }
+    
+    jsonp({
+      url: 'http://localhost:3000',
+      params: { 
+        a: 1,
+        b: 2
+      }
+    }).then(data => {
+      // 拿到数据进行处理
+      console.log(data); // 数据包
+    })
+    
+    // 服务端
+    let express = require('express')
+    let app = express()
+    app.get('/', function(req, res) {
+      let { a, b, callback } = req.query
+      console.log(a); // 1
+      console.log(b); // 2
+      // 注意哦，返回给script标签，浏览器直接把这部分字符串执行
+      res.end(`${callback}('数据包')`);
+    })
+    app.listen(3000)
+    
+    ```
+
+    
+
 - node中间件代理跨域
+
+- websocket 是HTML5标准中的一种通信协议 以`ws://`(非加密)和`wss://`(加密)作为协议前缀，该协议不实行同源政策，只要服务器支持就行
+
+- postMessage
 
 ### [浏览器安全](https://juejin.cn/post/6991888178890145828)
 
