--- a/2022面试题.md
+++ b/2022面试题.md
@@ -225,12 +225,12 @@ hook 复用**逻辑**. HOC复用**逻辑和视图**
 #### React.memo() 和 React.useMemo() 的区别
 
 - memo是高阶组件. 浅比较props, 引用类型可以用第二个参数手动比价
-
 - useMemo 返回一个缓存值. 只有依赖项发生变化才会重新执行.
-
 - useCallback 根据依赖项缓存函数
 
   - 有很多时候，我们在 `useEffect` 中使用某个定义的外部函数，是要添加到 `deps` 数组中的，如果不用 `useCallback` 缓存，这个函数在每次重新渲染时都是一个完全新的函数，也就是引用地址发生了变化，这就会导致 `useEffect` 总会无意义的执行。
 
-    
 
+## Webpack
+
+### webpack5 和 webpack4 的区别有哪些 ？
