--- a/2022面试题.md
+++ b/2022面试题.md
@@ -234,3 +234,21 @@ hook 复用**逻辑**. HOC复用**逻辑和视图**
 ## Webpack
 
 ### webpack5 和 webpack4 的区别有哪些 ？
+
+
+
+
+
+## 经历
+
+react使用优势?
+
+
+
+性能优化?
+
+webpack 压缩js的插件?
+
+hook与类组件的区别?
+
+使用typescript的好处?
