--- a/要点解析.md
+++ b/要点解析.md
@@ -85,7 +85,7 @@ Person.prototype.__proto__ === Object.prototype // true
 
 那 Object.prototype 的原型呢？
 
-null
+null
 
 ```javascript
 Object.prototype.__proto__ === null // true
